--- a/src/app/pages/auth/login/login.page.html
+++ b/src/app/pages/auth/login/login.page.html
@@ -2,7 +2,7 @@
  <div class="form">
   <div class="form-container">
     <h1>Log In</h1>
-    <form>
+    <form [formGroup]="form" (ngSubmit)="login()">
       <ion-item>
         <ion-label position="floating">Email <ion-text color="danger">*</ion-text></ion-label>
         <ion-input required formControlName="email" type="text"></ion-input>
@@ -11,7 +11,7 @@
         <ion-label position="floating">Contraseña <ion-text color="danger">*</ion-text></ion-label>
         <ion-input required formControlName="password" type="text"></ion-input>
       </ion-item>
-      <ion-button block color="primary" type="submit" [disabled]="">
+      <ion-button block color="primary"  type="submit" [disabled]="">
         Login
       </ion-button>
     </form>
