--- a/src/app/pages/auth/sign-up/sign-up.page.scss
+++ b/src/app/pages/auth/sign-up/sign-up.page.scss
@@ -1,78 +1,72 @@
-.form-container {
-    max-width: 400px;
-    margin: auto;
-    padding: 20px;
-    background: #1e1e1e; // Fondo oscuro para un look moderno
-    border-radius: 12px;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
-  }
-  
-  ion-item {
-    --background: transparent;
-    --border-radius: 8px;
-    --border-color: #444;
-    border: 1px solid var(--border-color);
-    margin-bottom: 12px;
-  }
-  
-  ion-label {
-    color: #ffffff; // Color blanco para buen contraste
-    font-size: 14px;
-  }
-  
-  ion-input {
-    color: #ffffff;
-  }
-  
-  ion-button {
-    width: 100%;
-    font-size: 16px;
-    font-weight: bold;
-    --border-radius: 8px;
-    --background: #007bff; // Azul moderno
-    --background-hover: #0056b3;
-  }
-  
-  ion-text[color="danger"] {
-    font-weight: bold;
-  }
-  
-  ion-icon-button {
-    color: #ccc;
-  }
-  
-  ion-button[disabled] {
-    opacity: 0.5;
-  }
+* {
+  color: black;
+}
 
-  ion-item.password-item {
-    display: flex;
-    align-items: center;
-    --background: transparent;
-    --border-radius: 8px;
-    --border-color: #444;
-    border: 1px solid var(--border-color);
-    margin-bottom: 12px;
-    position: relative;
-  }
-  
-  ion-input {
-    flex: 1;
-    color: #ffffff;
-  }
-  
-  ion-icon{
-    transform: scale(1.5) translate(-10px, 0px);
+$primary-color: #4285f4;
 
+ion-content {
+  --background: white;
+
+  .form {
+    background: white;
+    margin: 2rem 1rem;
+    padding: 2rem 1.5rem;
+    text-align: center;
+    h1 {
+      color: #1a237e;
+      font-size: 1.5rem;
+      font-weight: 600;
+      margin-bottom: 2rem;
+      text-align: center;
+    }
+  }
+}
+
+ion-item {
+  --background: white;
+  --padding-start: 0;
+  --inner-padding-end: 0;
+}
+
+.label {
+  color: black;
+  margin-bottom: 0.5rem;
+  font-size: 1rem;
+}
+
+ion-button {
+  border-radius: 5rem;
+  --box-shadow: none;
+  --padding-top: 1rem;
+  --padding-bottom: 1rem;
+  margin: 1.5rem 0;
+  font-weight: 500;
+  text-transform: capitalize;
+  text-align: center;
+}
+
+.small-text.log-in-redirect {
+  text-align: center;
+  font-size: 1rem;
+  color: #333333;
+  margin-top: 1rem;
+
+  a {
+    color: $primary-color;
+    text-decoration: none;
+    font-weight: 500;
+  }
+}
+
+ion-icon {
+  transform: scale(1.5) translate(-10px, 0px);
 }
 
 .input-icons {
-    display: flex;
-    gap: 20px;
-    align-items: start; 
-  }
-  
-  .icon {
-    font-size: 20px;
-  }
-  
+  display: flex;
+  gap: 20px;
+}
+
+.icon {
+  font-size: 20px;
+}
