--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -33,5 +33,30 @@
     </ion-toolbar>
   </ion-header>
 
-  <ion-content class="ion-padding"> </ion-content>
+  <ion-content class="ion-padding home-content">
+    <div class="welcome-container">
+      <h1 class="welcome-title">¡Bienvenido!</h1>
+      <div class="welcome-card">
+        <ion-icon name="home" class="welcome-icon"></ion-icon>
+        <p class="welcome-text">Gracias por usar nuestra aplicación. Aquí podrás gestionar todo lo que necesites de forma fácil y rápida.</p>
+        <div class="features-grid">
+          <div class="feature-item">
+            <ion-icon name="shield-checkmark"></ion-icon>
+            <h3>Seguro</h3>
+            <p>Tu información está protegida</p>
+          </div>
+          <div class="feature-item">
+            <ion-icon name="flash"></ion-icon>
+            <h3>Rápido</h3>
+            <p>Interfaz optimizada</p>
+          </div>
+          <div class="feature-item">
+            <ion-icon name="happy"></ion-icon>
+            <h3>Fácil</h3>
+            <p>Diseño intuitivo</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </ion-content>
 </div>
