feat(login): biometrica autentication

--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -36,6 +36,11 @@
   <ion-content class="ion-padding home-content">
     <div class="welcome-container">
       <h1 class="welcome-title">¡Bienvenido!</h1>
+      <!-- <ion-button 
+      [color]="buttonState === 'complete' ? 'success' : 'primary'" 
+      (mousedown)="onPressed()" (mouseup)="onReleased()" (mouseleave)="onReleased()" expand="block" shape="round">
+        {{ buttonText }}
+      </ion-button> -->
       <div class="welcome-card">
         <ion-icon name="home" class="welcome-icon"></ion-icon>
         <p class="welcome-text">Gracias por usar nuestra aplicación. Aquí podrás gestionar todo lo que necesites de forma fácil y rápida.</p>
