--- a/src/app/pages/auth/sign-up/sign-up.page.html
+++ b/src/app/pages/auth/sign-up/sign-up.page.html
@@ -3,7 +3,7 @@
     <h1>Sign Up</h1>
     <div class="form-container">
       <form [formGroup]="form" (ngSubmit)="signUp()">
-
+        
         <div class="photo-upload">
           <div class="photo-circle">
             <img *ngIf="photoPreview" [src]="photoPreview" class="profile-img"/>
@@ -14,53 +14,39 @@
         </div>
 
         <ion-item>
-          <ion-label class="label" position="floating"
-            >Nombre completo <ion-text color="danger">*</ion-text></ion-label
-          >
-          <ion-input
-            required
-            formControlName="fullNames"
-            type="text"
-          ></ion-input>
+          <ion-label class="label" position="floating">
+            Nombre completo <ion-text color="danger">*</ion-text>
+          </ion-label>
+          <ion-input required formControlName="fullNames" type="text"></ion-input>
           <div *ngIf="form.controls.fullNames.invalid && form.controls.fullNames.touched">
             <small>El nombre es obligatorio</small>
           </div>
         </ion-item>
 
         <ion-item>
-          <ion-label class="label" position="floating"
-            >Email <ion-text color="danger"></ion-text></ion-label
-          >
-          <ion-input required formControlName="email" type="text"></ion-input>
+          <ion-label class="label" position="floating">
+            Email <ion-text color="danger">*</ion-text>
+          </ion-label>
+          <ion-input required formControlName="email" type="email"></ion-input>
           <div *ngIf="isEmailValid as message">
             <small>{{ message }}</small>
           </div>
         </ion-item>
 
         <ion-item>
-          <ion-label class="label" position="floating"> 
-            Numero de telefono (opcional)</ion-label>
-          <ion-input formControlName="telNumber" type="text"></ion-input>
+          <ion-label class="label" position="floating">Número de teléfono (opcional)</ion-label>
+          <ion-input formControlName="telNumber" type="tel"></ion-input>
         </ion-item>
 
         <ion-item class="password-item">
-          <ion-label class="label" position="floating"
-            >Contraseña <ion-text color="danger">*</ion-text></ion-label
-          >
-          <ion-input
-            required
-            formControlName="password"
-            [type]="!passwordShown ? 'password' : 'text'"
-          >
-            <div slot="end" class="input-icons">
-              <ion-icon
-                class="icon"
-                slot="end"
-                [color]="passwordShown ? 'black' : 'medium' "
-                [name]=" passwordShown ? 'eye' : 'eye-off'"
-                (click)="togglePassword()"
-              ></ion-icon>
-            </div>
+          <ion-label class="label" position="floating">
+            Contraseña <ion-text color="danger">*</ion-text>
+          </ion-label>
+          <ion-input required formControlName="password" [type]="passwordType">
+            <ion-icon slot="end" 
+              [name]="passwordType === 'password' ? 'eye-off' : 'eye'" 
+              (click)="togglePassword()">
+            </ion-icon>
           </ion-input>
           <div *ngIf="isPasswordValid as message">
             <small>{{ message }}</small>
@@ -68,38 +54,33 @@
         </ion-item>
 
         <ion-item class="password-item">
-          <ion-label class="label" position="floating"
-            >Confirmar contraseña
-            <ion-text color="danger">*</ion-text></ion-label
-          >
-          <ion-input
-            required
-            formControlName="confirmPassword"
-            [type]="!passwordShown ? 'password' : 'text'"
-          >
-            <div slot="end" class="input-icons">
-              <ion-icon
-                class="icon"
-                slot="end"
-                [color]="passwordShown ? 'black' : 'medium' "
-                [name]=" passwordShown ? 'eye' : 'eye-off'"
-                (click)="togglePassword()"
-              ></ion-icon>
-            </div>
+          <ion-label class="label" position="floating">
+            Confirmar contraseña <ion-text color="danger">*</ion-text>
+          </ion-label>
+          <ion-input required formControlName="confirmPassword" [type]="passwordType">
+            <ion-icon slot="end" 
+              [name]="passwordType === 'password' ? 'eye-off' : 'eye'" 
+              (click)="togglePassword()">
+            </ion-icon>
           </ion-input>
-          <div *ngIf="isPasswordValid as message">
-            <small>{{ message }}</small>
+          <div *ngIf="form.hasError('passwordsMismatch') && form.touched">
+            <small>Las contraseñas no coinciden</small>
           </div>
         </ion-item>
 
         <ion-button expand="full" type="submit" [disabled]="form.invalid">
-          Sing Up
+          Sign Up
         </ion-button>
+
+        <ion-button *ngIf="isBiometricAvailable" expand="full" fill="outline" (click)="enableBioLogin()">
+          Activar inicio de sesión con huella
+        </ion-button>
+
       </form>
     </div>
     <hr />
     <span class="small-text log-in-redirect">
-      Already have an acocount? <a routerLink="/login">Log in</a>
+      ¿Ya tienes una cuenta? <a routerLink="/login">Iniciar sesión</a>
     </span>
   </div>
 </ion-content>
