--- a/src/app/pages/auth/sign-up/sign-up.page.scss
+++ b/src/app/pages/auth/sign-up/sign-up.page.scss
@@ -7,6 +7,10 @@ $danger-color: #dc3545;
 $border-color: #e0e0e0;
 $text-color: #333333;
 
+ion-header {
+  padding-top: env(safe-area-inset-top);
+}
+
 .photo-upload {
   display: flex;
   flex-direction: column;
