--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -33,6 +33,10 @@ ion-menu {
 }
 
 // Estilos de la página de inicio
+ion-header {
+  padding-top: env(safe-area-inset-top);
+}
+
 .home-content {
   --background: #{$background-light};
   
