--- a/src/app/pages/profile/profile.page.scss
+++ b/src/app/pages/profile/profile.page.scss
@@ -1,12 +1,7 @@
-ion-header {
-  padding-top: env(safe-area-inset-top);
-}
-
 .profile-content {
   --background: #ffffff;
 
   .profile-container {
-    height: 100%;
     display: flex;
     flex-direction: column;
     gap: 2rem;
@@ -19,9 +14,9 @@ ion-header {
     padding: 2rem 0;
 
     .photo-container {
-      width: 120px;
-      height: 120px;
-      border-radius: 60px;
+      width: 200px;
+      height: 200px;
+      clip-path: circle();
       overflow: hidden;
       box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
       border: 4px solid #ffffff;
@@ -30,7 +25,7 @@ ion-header {
       .profile-img {
         width: 100%;
         height: 100%;
-        object-fit: cover;
+        clip-path: circle();
       }
 
       .photo-placeholder {
@@ -130,38 +125,32 @@ ion-header {
 }
 
 // Estilos para el header translúcido
-ion-header[translucent="true"] {
-  ion-toolbar {
-    --background: rgba(255, 255, 255, 0.9);
-    backdrop-filter: blur(10px);
-  }
+ion-fab-button {
 
-  ion-title {
-    font-weight: 500;
-    color: #333333;
-  }
+    --background: rgba(255, 255, 255, 0.9);
+  
 }
 
 // Media queries para responsividad
-@media (max-width: 768px) {
-  .profile-content {
-    .profile-container {
-      padding: 0.5rem;
-    }
+// @media (max-width: 768px) {
+//   .profile-content {
+//     .profile-container {
+//       padding: 0.5rem;
+//     }
 
-    .profile-header {
-      .photo-container {
-        width: 100px;
-        height: 100px;
-      }
-    }
+//     .profile-header {
+//       .photo-container {
+//         width: 100px;
+//         height: 100px;
+//       }
+//     }
 
-    .info-item {
-      .info-content {
-        p {
-          font-size: 1rem;
-        }
-      }
-    }
-  }
-}
+//     .info-item {
+//       .info-content {
+//         p {
+//           font-size: 1rem;
+//         }
+//       }
+//     }
+//   }
+// }
